# test_ci_cd

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  peru.yaml
.github/workflows/: cmake.yml
include/: add.h
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  tests_add.cpp
